clear code